# emul8tor

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: cpu.rs
desktop/: Cargo.toml
desktop/src/: emulator.rs  lib.rs  main.rs
src/: cpu.rs  emulator.rs  lib.rs  main.rs  peripherals.rs
wasm_emulator/: Cargo.toml  wasm_emulator.rs
web/: index.html  index.js  style.css
