[package]
name = "wasm_emul8tor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu_core = { path = "../core" }
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"

[dependencies.rand]
version = "0.7.3"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.64"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "Window",
]

[lib]
name = "libemulator"
path = "wasm_emulator.rs"
crate-type = ["cdylib"]
